--- a/css/style.css
+++ b/css/style.css
@@ -293,3 +293,154 @@ span {
     font-weight: bold;
     letter-spacing: 1px;
 }
+/* ==================== MEDIA QUERIES ==================== */
+@media (max-width: 1200px) {
+    html {
+        font-size: 55%;
+    }
+
+    .home-img img {
+        width: 40vw;
+    }
+}
+
+@media (max-width: 991px) {
+    .header {
+        padding: 2rem 3%;
+    }
+
+    section {
+        padding: 10rem 3% 2rem;
+    }
+
+    .services {
+        padding-bottom: 7rem;
+    }
+
+    .about-img img {
+        width: 35vw;
+    }
+}
+
+@media (max-width: 768px) {
+    #menu-icon {
+        display: block;
+    }
+
+    .navbar {
+        position: absolute;
+        top: 100%;
+        left: -100%;
+        width: 100%;
+        padding: 1rem 4%;
+        background: var(--bg-color);
+        box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .2);
+        transition: .3s ease;
+        z-index: 999;
+    }
+
+    .navbar.active {
+        left: 0;
+    }
+
+    .navbar ul {
+        flex-direction: column;
+        padding: 1rem 0;
+    }
+
+    .navbar ul li {
+        margin: 1.5rem 0;
+        text-align: center;
+    }
+
+    .home {
+        flex-direction: column-reverse;
+        gap: 3rem;
+        text-align: center;
+    }
+
+    .home-content h3 {
+        font-size: 2.6rem;
+    }
+
+    .home-content h1 {
+        font-size: 5rem;
+    }
+
+    .home-img img {
+        width: 70vw;
+    }
+
+    .about {
+        flex-direction: column-reverse;
+    }
+
+    .about-img img {
+        width: 70vw;
+        margin-top: 4rem;
+    }
+
+    .services h2 {
+        margin-bottom: 3rem;
+    }
+
+    .services-container {
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
+
+@media (max-width: 617px) {
+    .portfolio-container {
+        grid-template-columns: 1fr;
+    }
+}
+
+@media (max-width: 480px) {
+    html {
+        font-size: 50%;
+    }
+
+    .home-content h1 {
+        font-size: 4.5rem;
+    }
+
+    .home-content h3 {
+        font-size: 2.4rem;
+    }
+
+    .btn {
+        padding: 1.2rem 2.8rem;
+    }
+
+    .about-content h2 {
+        font-size: 3.5rem;
+    }
+
+    .services-box {
+        padding: 2rem;
+    }
+
+    .services-box i {
+        font-size: 5rem;
+    }
+}
+
+@media (max-width: 365px) {
+    .home-img img {
+        width: 90vw;
+    }
+
+    .about-img img {
+        width: 90vw;
+    }
+
+    .social-media a {
+        width: 3.5rem;
+        height: 3.5rem;
+        margin: 2rem 1rem;
+    }
+
+    .services-box p {
+        font-size: 1.4rem;
+    }
+}
